--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -80,9 +80,10 @@
                 <i class="fa-brands fa-square-instagram"></i>
                 <i class="fa-brands fa-linkedin"></i>
             </div>
-            <div class="f-info-brand">&copy; WanderLust Private Limited</div>
+            <div class="f-info-brand">&copy; WedInk Private Limited</div>
             <div class="f-info-links">
                 <a href="/privacy">Privacy</a>
+                <b> ❤️Shivam ❤️</b>
                 <a href="/terms">Terms</a>
             </div>
         </div>
