--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,7 +19,7 @@
 <%- include("../includes/navbar.ejs") %>
 
     <div class="container main-content ">
-      
+        <%- include("../includes/flash.ejs") %>
         <%- body %>
     </div>
     <%- include("../includes/footer.ejs") %>
