--- a/views/listings/front.ejs
+++ b/views/listings/front.ejs
@@ -123,7 +123,7 @@ p {
     </video>
 </div>
 <div class="content">
-    <h1 style="color: skyblue; text-decoration: underline;">Welcome to CheersCreations</h1>
+    <h1 style="color: skyblue; text-decoration: underline;">Welcome to WedInk</h1>
 
     <p>Ultimate destination for creating custom celebration cards online! Whether it's a wedding, birthday, or any special occasion, we help you design unique and personalized cards to suit your event perfectly </p>
 
