--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -33,12 +33,15 @@
         .form-control:not(:placeholder-shown) + .form-label {
             color: #28a745;
         }
+        .move-up {
+            margin-top: -145px !important; /* Adjust the value as needed */
+        }
     </style>
 </head>
 <body class="bg-light">
     <% layout("/layouts/boilerplate") %>
     <div class="container min-vh-100 d-flex align-items-center">
-        <div class="row justify-content-center w-100">
+        <div class="row justify-content-center w-100 move-up">
             <div class="col-lg-5 col-md-7 col-sm-12">
                 <div class="card shadow-lg p-4 animate__animated animate__fadeInUp">
                     <div class="text-center mb-4 animate__animated animate__fadeInDown">
