--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -108,6 +108,7 @@
         background-color: #252020 !important;
         backdrop-filter: blur(10px);
         padding: 1rem 0;
+       height: 3.5rem !important;
         transition: all 0.3s ease;
     }
 
@@ -125,10 +126,22 @@
         position: relative;
     }
     .mass {
-        
-        font-size: 2.1rem !important;
-        color: rgb(221, 169, 114) !important;
+    font-size: 2.1rem !important;
+    color: rgb(221, 169, 114) !important;
+}
+
+@media (max-width: 1024px) {
+    .mass {
+        font-size: 1.8rem !important;
     }
+}
+
+
+@media (max-width: 768px) {
+    .mass {
+        font-size: 1.5rem !important;
+    }
+}
 
     .navbar .nav-link::after {
         content: '';
