--- a/views/marriageCards/cardShow.ejs
+++ b/views/marriageCards/cardShow.ejs
@@ -123,7 +123,7 @@
             }
 
             .listing-details li {
-                font-size: 1.4rem;
+                font-size: 1.1rem;
             }
         }
     </style>
@@ -152,9 +152,9 @@
                                 <li><strong>Size:</strong> <%= marriageCard.size %></li>
                                 <li class="price">Price: &#8377; <%= marriageCard.price.toLocaleString("en-IN") %></li>
                             </ul>
-                            <div class="price text-center mt-3">
-                                <a href="/listings/<%= listing._id %>/Mcard/<%= marriageCard._id %>/book" class="btn btn-primary">Book Card</a>
-                            </div>
+                            
+                            
+                          
                         </div>
                     </div>
                 </div>
@@ -165,6 +165,10 @@
                         <form method="POST" action="/listings/<%= listing._id %>/Mcard/<%= marriageCard._id %>?_method=DELETE" class="d-inline">
                             <button class="btn btn-secondary me-3 mt-3">Delete Card</button>
                         </form>
+                    <% }else { %>
+                        <div class="price text-center mt-3">
+                            <a href="/listings/<%= listing._id %>/Mcard/<%= marriageCard._id %>/book" class="btn btn-primary">Book Card</a>
+                        </div>
                     <% } %>
                 </div>
             <% } else { %>
