--- a/views/listings/front.ejs
+++ b/views/listings/front.ejs
@@ -12,12 +12,11 @@
    .video-section {
     position: relative;
     width: 100%;
-    height: 100vh; /* Full viewport height */
+    height: 100vh; 
     overflow: hidden;
 }
 
-        /* Content Style */
-       /* Video Background Container */
+
 .video-container {
     position: absolute;
     top: 0;
@@ -56,21 +55,21 @@
 
 /* Content Style */
 h1 {
-    font-size: 5rem !important; /* Default font size */
+    font-size: 5rem !important;
 }
 
 p {
-    font-size: 1.2rem; /* Default font size for paragraph */
+    font-size: 1.2rem; 
 }
 
 /* Larger h1 and smaller p on mobile screens */
 @media (max-width: 912px) {
     h1 {
         font-size: 4rem !important;
-        margin-bottom: .6rem !important; /* Increase font size for h1 */
+        margin-bottom: .6rem !important; 
     }
     p {
-        font-size: 0.7rem  !important; /* Decrease font size for paragraph */
+        font-size: 0.7rem  !important; 
     }
     .btn {
         font-size: 1rem;
@@ -78,18 +77,31 @@ p {
     }
 }
 
-/* Adjust for screens between 320px and 941px */
 @media (min-width: 320px) and (max-width: 941px) {
     h1 {
-        font-size: 4.5rem ; /* Slightly increased font size for h1 */
+        font-size: 4.5rem ;
     }
     p {
-        font-size: 0.8rem; /* Slightly smaller font size for paragraph */
+        font-size: 0.8rem;
     }
     .btn {
         font-size: 1.2rem;
         padding: 15px 25px;
     }
+
+    .navbar-toggler {
+    margin-left: 10px !important; 
+}
+
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .navbar-toggler {
+    margin-left: -30px !important; 
+}
+.navbar-brand{
+    margin-right: -30px !important;
+}
 }
 
 
