--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -42,9 +42,10 @@
             <div class="input-group">
                 <input class="form-control" type="search" name="shopName" placeholder="Search shop..."
                     aria-label="Search">
-                <button class="btn btn-primary" type="submit">
-                    <i class="fas fa-search"></i>
-                </button>
+                    <button type="submit" style="padding: 4px 30px; font-size: 12px;background-color: #007bff; color: white; border-radius: 2px; border: none; cursor: pointer;">
+                        <i class="fas fa-search" style="font-size: 12px;"></i>
+                    </button>
+                    
             </div>
         </form>
     </div>
@@ -93,9 +94,9 @@
                 <div class="input-group">
                     <input class="form-control" type="search" name="shopName" placeholder="Search shop..."
                         aria-label="Search">
-                    <button class="btn btn-primary" type="submit">
-                        <i class="fas fa-search fa-sm"></i>
-                    </button>
+                        <button type="submit" style="padding: 4px 30px; font-size: 12px;background-color: #007bff; color: white; border-radius: 2px; border: none; cursor: pointer;">
+                            <i class="fas fa-search" style="font-size: 12px;"></i>
+                        </button>
                 </div>
             </form>
         </div>
@@ -225,7 +226,7 @@
             padding: 0.8rem 0;
         }
     }
-
+  
     
     
 </style>
