--- a/views/marriageCards/cardShow.ejs
+++ b/views/marriageCards/cardShow.ejs
@@ -132,7 +132,7 @@
     <% layout("/layouts/boilerplate") %>
     <div>
         <div class="listing-container">
-            <h1 class="page-title">Marriage Card Details</h1>
+            <h1 class="page-title"> Card Details</h1>
             <% if (marriageCard) { %>
                 <div class="row g-4">
                     <!-- Image Section -->
