--- a/views/order/bookNew.ejs
+++ b/views/order/bookNew.ejs
@@ -44,7 +44,7 @@
 <body>
     <% layout("/layouts/boilerplate") %>
     <div class="container mt-5">
-        <h2 class="text-center mb-4 animate__animated animate__fadeInDown">Book a Marriage Card</h2>
+        <h2 class="text-center mb-4 animate__animated animate__fadeInDown">Book a Card</h2>
 
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8 col-sm-12">
