--- a/views/listings/front.ejs
+++ b/views/listings/front.ejs
@@ -187,7 +187,7 @@ p {
     </video>
 </div>
 <div class="content">
-    <h1 id="animatedText" class="animated-text">Welcome</h1>
+    <h1 id="animatedText" class="animated-text">WedInk</h1>
 
 
     <p>Ultimate destination for creating custom celebration cards online! Whether it's a wedding, birthday, or any special occasion, we help you design unique and personalized cards to suit your event perfectly </p>
@@ -215,7 +215,7 @@ p {
 
 <script>
     function animateTextInfinite() {
-        const text = "Welcome";
+        const text = "WedInk";
         const animatedTextElement = document.getElementById("animatedText");
 
         let index = 0;
