--- a/views/order/bookNew.ejs
+++ b/views/order/bookNew.ejs
@@ -56,7 +56,7 @@
                         <input type="hidden" name="booking[marriageCard]" value="<%= marriageCard._id %>">
                         
                         <div class="mb-3 animate__animated animate__fadeInLeft" style="animation-delay: 0.2s">
-                            <label class="form-label">Marriage Card</label>
+                            <label class="form-label"> Card Name </label>
                             <input class="form-control border-success" value="<%= marriageCard.cardName %>" type="text" readonly>
                         </div>
 
