--- a/views/marriageCards/cardNew.ejs
+++ b/views/marriageCards/cardNew.ejs
@@ -39,7 +39,7 @@
 <body class="bg-light">
     <% layout("/layouts/boilerplate") %>
     <div class="container mt-5">
-        <h2 class="text-center mb-4 animate__animated animate__fadeInDown">Submit a New Marriage Card Listing</h2>
+        <h2 class="text-center mb-4 animate__animated animate__fadeInDown">Submit a New Card Listing</h2>
 
         <div class="row justify-content-center">
             <div class="col-lg-6 col-md-8 col-sm-12">
